[package]
authors = ["steinuil <steenuil.owl@gmail.com>"]
edition = "2021"
name = "twkwk"
version = "0.1.0"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
log = "0.4"
simple_logger = "4.1"
tokio = { version = "1.26", features = ["full"] }
